--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>17</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
