--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,15 @@
 
         <dependency>
             <groupId>com.j256.ormlite</groupId>
-            <artifactId>ormlite-jdbc</artifactId>
-            <version>5.0</version>
+            <artifactId>ormlite-core</artifactId>
+            <version>6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-jdbc</artifactId>
+            <version>6.1</version>
+        </dependency>
+
 
     </dependencies>
 
