--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.gruppeh/com.testPackage.stuffToDelete.HelloApplication</mainClass>
+                            <mainClass>com.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
