--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,7 @@
                 </configuration>
             </plugin>
 
+
             <!--
                 Take care of synchronizing java dependencies and imports in
                 package.json and main.js files.
@@ -255,6 +256,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>3.0.0-M6</version>
                         <executions>
                             <execution>
                                 <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
