--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,10 @@
             <artifactId>searchbox</artifactId>
             <version>0.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
