--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,10 @@
             <artifactId>mail-extensions-concurrent-javamail-spring-boot-starter</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
