--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,6 @@ spring.mail.username=lwollring@gmail.com
 spring.mail.password=agtnztdqgwnfasyj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 
